# mla-contest-recsys-04-2026

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
artifacts/: feature_importance_003b.csv  feature_importance_004.csv  feature_importance_005.csv  feature_importance_006.csv  feature_importance_007.csv  feature_importance_008.csv  feature_importance_joint01.csv  feature_importance_server_001_gpu.csv  feature_importance_server_002.csv  feature_importance_server_003.csv  feature_importance_server_004.csv  feature_importance_server_005.csv  feature_importance_server_006.csv  feature_importance_server_007.csv  feature_importance_server_008.csv  feature_importance_v2_features.csv  feature_importance_v2_top1.csv  feature_importance_v2_top2.csv  feature_importance_v2_top3.csv  feature_importance_v2_top4.csv  feature_importance_v2_top5.csv  feature_importance_v3_features.csv  feature_importance_v3_top1.csv  feature_importance_v4_features.csv  feature_importance_v4_top1.csv  feature_importance_v4_top2.csv  feature_importance_v4_top2_cpu.csv  feature_importance_v4_top3.csv  feature_importance_v4_top4.csv  feature_importance_v4_top5.csv  results.csv
configs/: evaluate.yaml  ranker.yaml  ranker_v2_top1.yaml  ranker_v2_top2.yaml  ranker_v2_top3.yaml  ranker_v2_top4.yaml  ranker_v2_top5.yaml  ranker_v3_top1.yaml  ranker_v4_top1.yaml  ranker_v4_top2.yaml  ranker_v4_top2_cpu.yaml  ranker_v4_top3.yaml  ranker_v4_top4.yaml  ranker_v4_top5.yaml  submit.yaml  submit_ranker.yaml  train.yaml  tune.yaml
docs/: contest-description.md  (+4 more)
(+102 files in other folders)
